updated refs and gtgr design table

--- a/Files/rrs/mi.bib
+++ b/Files/rrs/mi.bib
@@ -1,3 +1,36 @@
+@article{dingemanse2013between,
+  title={Between-individual differences in behavioural plasticity within populations: causes and consequences},
+  author={Dingemanse, Niels J and Wolf, Max},
+  journal={Animal Behaviour},
+  volume={85},
+  number={5},
+  pages={1031--1039},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{duckworth2009role,
+  title={The role of behavior in evolution: a search for mechanism},
+  author={Duckworth, Ren{\'e}e A},
+  journal={Evolutionary ecology},
+  volume={23},
+  number={4},
+  pages={513--531},
+  year={2009},
+  publisher={Springer}
+}
+
+@article{barton2000limits,
+  title={Limits to natural selection},
+  author={Barton, Nick and Partridge, Linda},
+  journal={BioEssays},
+  volume={22},
+  number={12},
+  pages={1075--1084},
+  year={2000},
+  publisher={Wiley Online Library}
+}
+
 @article{valente2021conspecific,
 title={Conspecific attraction for conservation and management of terrestrial breeding birds: Current knowledge and future research directions},
 author={Valente, Jonathon J and LeGrande-Rolls, Christa L and Rivers, James W and Tucker, Anna M and Fischer, Richard A and Betts, Matthew G},
